Fix DynamicArray box layout: switch to class, update CSS for correct sizing and spacing

--- a/src/Boxcontainer.css
+++ b/src/Boxcontainer.css
@@ -70,17 +70,26 @@
   justify-content: center;
 }
 
-#box {
+.box {
   height: 100px;
   background-color: #99ccff;
   border: 2px solid black;
   width: 112px;
   display: flex;
-  /* justify-content: center; */
   flex-direction: column;
   align-items: center;
   font-size: 1.9rem;
 }
+/* #box {
+  height: 100px;
+  background-color: #99ccff;
+  border: 2px solid black;
+  width: 112px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.9rem;
+} */
 .blink {
   background-color: red;
   animation: blink-animation 1s infinite;
